Fixing the broken internal links

--- a/packages/core/src/components/DateField/DateField.scss
+++ b/packages/core/src/components/DateField/DateField.scss
@@ -77,20 +77,20 @@ Style guide: components.date-field.react
 
 ## Guidance
 
-- Ensure you've [installed both the Core package and Layout package]({{root}}/getting-started)
+- Ensure you've [installed both the Core package and Layout package](/startup/installation)
 - Allow users to enter the date as flexibly as possible, for example, allowing `1` as well as `01` for a month input.
 - Be sure each field is properly labeled — some countries enter dates in day, month, year order.
 - It may be tempting to switch all or some of these text fields to drop downs, but these tend to be more difficult to use than text boxes.
 
 ## Accessibility
 
-- These text fields should follow the [accessibility guidelines for all text inputs]({{root}}/components/text-field/#guidance).
+- These text fields should follow the [accessibility guidelines for all text inputs](/components/text-field/#guidance).
 - Do not use JavaScript to auto advance the focus from one field to the next. This makes it difficult for keyboard-only users to navigate and correct mistakes.
 
 ## Related patterns
 
-- [Text field]({{root}}/components/text-field/)
-- [Grid]({{root}}/layout/grid/)
+- [Text field](/components/text-field/)
+- [Grid](/layout/grid/)
 
 Style guide: components.date-field.guidance
 */
