--- a/packages/core/src/utilities/display-visibility.scss
+++ b/packages/core/src/utilities/display-visibility.scss
@@ -98,7 +98,7 @@ Toggling visibility by breakpoint
 
 @responsive
 
-Use a [breakpoint prefix]({{root}}/guidelines/responsive) to show/hide content at specific breakpoints.
+Use a [breakpoint prefix](/guidelines/responsive) to show/hide content at specific breakpoints.
 
 A breakpoint prefix is supported on all of the utility classes mentioned above, except for `ds-u-visibility--screen-reader`.
 
